# auto-research-agent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/: config.py  database.py  graph.py  main.py  models.py  prompts.py  search.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_graph_helpers.py  test_search.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/services/: api.ts
frontend/src/views/: History.vue  Research.vue
